fixed founder cv overlaping his links

--- a/css/main.css
+++ b/css/main.css
@@ -1359,6 +1359,14 @@ textarea {
     max-width: 235px;
   }
 
+  .founder {
+    height: 285px;
+  }
+
+  .founder__image {
+    height: 100%;
+    object-fit: cover
+  }
   .founder__cv {
     line-height: 15px;
   }
